[package]
name = "octo"
version = "0.0.2"
edition = "2021"
authors = ["Fabio Polimeni"]
description = "A REPL chat for LLM written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
async-trait = "0.1.75"
clap = { version = "4.4.11", features = ["derive"] }
crossterm = "0.27.0"
futures = "0.3.30"
reqwest = { version = "0.11.23", features = ["json"] }
reqwest-eventsource = "0.5.0"
rustyline = "13.0.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"
